crates/solidity/testing/snapshots/bindings_output/yul/imported_constant/generated/v2/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[constants.sol:1:1]
   │
 1 │ uint256 constant FOO = 1;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Test" @ main.sol:3:10] (contract)
- Def: #2 ["test" @ main.sol:4:14] (function, type: function () returns void)
- Def: #3 ["x" @ main.sol:6:17] (yul variable)

------------------------------------------------------------------------

References (2):
- Ref: ["add" @ main.sol:6:22] -> built-in
- Ref: ["FOO" @ main.sol:6:26] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 6 │             let x := add(FOO, 1)
   │                 ┬    ─┬─ ─┬─  
   │                 ╰───────────── name: 3
   │                       │   │   
   │                       ╰─────── built-in
   │                           │   
   │                           ╰─── unresolved
───╯
